syntax = "proto3";

package itmo.dev.platform.observability.tests;
option csharp_namespace = "Itmo.Dev.Platform.Observability.Tests";

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}